--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,7 @@
 <% @body_class = "about-page" %>
 <% content_for :jumbotron do %>
 	<h1>About</h1>
-	<p class="lead">Here is a sentence about BTA<br> Here are some more words that sound great.</p>
+	<p class="lead">The fundamental goal of the Bible Translate Assistant is to<br> help translate the entire Bible into all of the world’s languages.</p>
 <% end %>
 
 <div class="main-content clearfix">
