--- a/app/views/home/how_it_works.html.erb
+++ b/app/views/home/how_it_works.html.erb
@@ -3,3 +3,7 @@
 	<h1>How it Works</h1>
 	<p class="lead">Quick sentence about how BTA works.<br> Here are some more words that sound great.</p>
 <% end %>
+
+<div class="main-content clearfix">
+	<h2>Placeholder for animation.</h2>
+</div>
