--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,15 +6,15 @@
 
 <div class="main-content clearfix">
 	<div class="col-lg-4 col-md-4">
-		<h2>Catchy Title</h2>
-		<p>Bacon ipsum dolor amet spare ribs aliqua swine fugiat dolor anim. In consectetur tri-tip ground round. Occaecat pork chop turducken brisket ut pastrami fatback prosciutto cupim ex bacon dolore pariatur. Incididunt sirloin et in. Ullamco et aliquip shankle cillum. Fugiat shankle minim, hamburger tongue in ribeye bresaola beef ribs strip steak.</p>
+		<h2>Users</h2>
+		<p>The Bible Translate Assistant will be used by missionaries, linguist and translators. Missionaries often need computational help translating the Old Testament. The web app produces an initial draft translation which significantly improves the productivity of the translators.</p>
 	</div>
 	<div class="col-lg-4 col-md-4">
-		<h2>Sweet Title</h2>
-		<p>Bacon ipsum dolor amet spare ribs aliqua swine fugiat dolor anim. In consectetur tri-tip ground round. Occaecat pork chop turducken brisket ut pastrami fatback prosciutto cupim ex bacon dolore pariatur. Incididunt sirloin et in. Ullamco et aliquip shankle cillum. Fugiat shankle minim, hamburger tongue in ribeye bresaola beef ribs strip steak.</p>
+		<h2>App</h2>
+		<p>BTA will develop semantic representations of the Bible. Developing a semantic representation of a biblical text consists of representing that text with semantically simple words and simple sentence structures which convey the same meaning as the original text. After capturing the meaning of a text using simple words and simple sentences, we add detailed linguistic information so that the app will have access to the information it needs in order to generate that text in a wide variety of languages.</p>
 	</div>
 	<div class="col-lg-4 col-md-4">
-		<h2>Awesome Title</h2>
-		<p>Bacon ipsum dolor amet spare ribs aliqua swine fugiat dolor anim. In consectetur tri-tip ground round. Occaecat pork chop turducken brisket ut pastrami fatback prosciutto cupim ex bacon dolore pariatur. Incididunt sirloin et in. Ullamco et aliquip shankle cillum. Fugiat shankle minim, hamburger tongue in ribeye bresaola beef ribs strip steak.</p>
+		<h2>Future</h2>
+		<p>We will continually enhance the app that has been designed specifically for Bible translation. It will now make creating drafts of the Old Testament easier to understand.</p>
 	</div>
 </div>
