--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,8 +138,21 @@ label.ng-binding {
   line-height: 45px;
   overflow-y: scroll;
   overflow-x: hidden;
+  margin: 8px 0;
 }
 
+.pane-container {
+  margin: 8px 0;
+}
+
+.source-text .panel-body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.source-text .panel {
+  margin-bottom: 0;
+}
 
 .source-text .highlighted {
   background-color: #1159b4;
