--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <% @body_class = "index-page" %>
 <% content_for :jumbotron do %>
 	<h1>Translate the Bible<br>Quicker and Easier</h1>
-	<p class="lead">Use this awesome app to translate the bible for those who need it!<br> Here are some more words that sound great.</p>
+	<p class="lead">BTA will speed the translation process up by 10 years.<br>That means more people will be impacted by the Word in their own language.</p>
 	<a href="/users/sign_up"><button class="btn btn-info btn-lg">Get Started</button></a>
 <% end %>
