--- a/app/views/home/translate.html.erb
+++ b/app/views/home/translate.html.erb
@@ -110,7 +110,7 @@
       </div>
       
       <div ng-class="{ 'propertyPane': true, 'propertyCompleted': selectedWordGroup.tense }" ng-show="hasVerbConcept()">
-        <div class="panel panel-info">
+        <div class="panel panel-default">
         <div class="panel-heading">
         <h3 class="panel-title">
           Tense
