Fix bug where group type pane wouldn't hide after deselect.

--- a/app/views/home/translate.html.erb
+++ b/app/views/home/translate.html.erb
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <div ng-class="{ 'propertyPane': true, 'propertyCompleted': selectedWordGroup.groupType }" ng-show="showGroupTypePane">
+      <div ng-class="{ 'propertyPane': true, 'propertyCompleted': selectedWordGroup.groupType }" ng-show="showGroupTypePane()">
         <div class="panel panel-default">
         <div class="panel-heading">
         <h3 class="panel-title">
