--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,22 @@ body.translate-page {
 	padding-top: 20px;
 	padding-bottom: 40px;
 }
+.embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+.embed-container iframe, .embed-container object, .embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 footer {
 	text-align: center;
@@ -113,6 +129,9 @@ label.ng-binding {
 	.about-page .jumbotron, .works-page .jumbotron {
 		height: 400px;
 	}
+	.embed-container {
+		max-width: 75%;
+	}
 	.footer-list li {
 		display: inline-block;
 		margin-bottom: 0;
@@ -140,6 +159,11 @@ label.ng-binding {
   margin: 8px 0;
 }
 
+.help-text {
+    margin-top: 70px;
+    font-size: 20px;
+    line-height: 38px;
+}
 .pane-container {
   margin: 8px 0;
 }
