--- a/app/views/home/how_it_works.html.erb
+++ b/app/views/home/how_it_works.html.erb
@@ -1,9 +1,11 @@
 <% @body_class = "works-page" %>
 <% content_for :jumbotron do %>
 	<h1>How it Works</h1>
-	<p class="lead">Quick sentence about how BTA works.<br> Here are some more words that sound great.</p>
+	<p class="lead">Complex sentences, simplified to make the translation process smoother.</p>
 <% end %>
 
 <div class="main-content clearfix">
-	<h2>Placeholder for animation.</h2>
+	<div class='embed-container'>
+		<iframe src='https://www.youtube.com/embed/enl-D8DcPrQ' frameborder='0' allowfullscreen></iframe>
+	</div>
 </div>
